fix: update.jar